Add jquery src, add html to display claim information, add jquery to provide that claim information

--- a/index.html
+++ b/index.html
@@ -3,11 +3,23 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Weekend Assignment</title>
+		<script src="jquery.js"></script>
 		<script src="app.js"></script>
 	</head>
 	<body>
+		<h1>Initial Claims</h1>
+		<table class="display-claims">
+			<tr>
+				<td>Patient Name</td> <td>Visit Type</td> <td>Cost</td>
+			</tr>
 
+		</table>
 
+		<button id="process-claims">Process Claims</button>
+
+		<div class="message-center">
+
+		</div>
 
 	</body>
 
