Add function for process claim button, remove console log loops from earlier version

--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
 		<button id="process-claims">Process Claims</button>
 
 		<div class="message-center">
+			<h1>Processed Claims</h1>
+			<table class="claims-payed">
+				<tr>
+					<td>Patient Name</td> <td>Amount Payed</td>
+				</tr>
+			</table>
+
+			<div class="total">
+				Total:
+			</div>
 
 		</div>
 
