Add input fields for additional claims

--- a/index.html
+++ b/index.html
@@ -14,7 +14,24 @@
 				<th>Patient Name</th> <th>Visit Type</th> <th>Cost</th>
 			</tr>
 
+			<tr class="additional-claims">
+				<td>
+					<input id="patient-name" type="text" placeholder="Patient Name" />
+				</td>
+				<td>
+					<input id="visit-type" type="text" placeholder="Visit Type" />
+				</td>
+				<td>
+					<input id="cost" type="text" placeholder="Cost" />
+				</td>
+			</tr>
 		</table>
+		<button id="add-claims">Add Claim</button>
+
+		<form>
+
+		</form>
+
 
 
 
