Add faithful and accurate representation of American political system

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 		<script src="app.js"></script>
 	</head>
 	<body>
+		<button id="elect-sanders">Elect Bernie Sanders</button>
+		<div class="workers-paradise">
+			You Are Now Living In Bernie Sanders' Glorious Socialist Worker's Paradise!
+		</div>
 		<h1>Initial Claims</h1>
 		<table class="display-claims">
 			<tr>
